fix: adjust content spacing

--- a/components/statuslight/index.css
+++ b/components/statuslight/index.css
@@ -22,6 +22,7 @@ governing permissions and limitations under the License.
 
   --spectrum-statuslight-font-size: var(--spectrum-font-size-100);
 
+  /* Space */
   /* --spectrum-statuslight-info-dot-resolved-margin-top: calc(var(--spectrum-statuslight-info-dot-margin-top) - var(--spectrum-statuslight-info-text-padding-top)); */
   --spectrum-statuslight-spacing-dot-to-label: var(--spectrum-text-to-visual-100);
   --spectrum-statuslight-spacing-top-to-dot: var(--spectrum-status-light-top-to-dot-medium);
@@ -113,7 +114,6 @@ governing permissions and limitations under the License.
 }
 
 .spectrum-StatusLight {
-
   display: flex;
   flex-direction: row;
   align-items: flex-start;
@@ -149,14 +149,17 @@ governing permissions and limitations under the License.
     border-radius: var(--spectrum-statuslight-corner-radius);
 
     /* margin-block: var(--spectrum-statuslight-info-dot-resolved-margin-top) var(--spectrum-global-dimension-size-0); */
-    margin-block: var(--spectrum-statuslight-spacing-top-to-dot);
-    /* margin-inline: var(--spectrum-global-dimension-size-0) var(--spectrum-statuslight-info-text-gap); */
-    margin-inline: var(--spectrum-statuslight-spacing-dot-to-label);
+    margin-block-start: var(--spectrum-statuslight-spacing-top-to-dot);
+    margin-inline-end: var(--spectrum-statuslight-spacing-dot-to-label);
 
     /* support high contrast/forced-color-adjust mode for dot */
     -ms-high-contrast-adjust: none;
     forced-color-adjust: none;
   }
+}
+
+.spectrum-StatusLight-label {
+  margin-block-start: var(--spectrum-statuslight-spacing-top-to-label);
 }
 
 .spectrum-StatusLight--neutral {
